Add bibtex module.

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,1 +1,2 @@
 -e git+https://github.com/JuliaLang/JuliaDoc.git#egg=JuliaDoc
+-e git+https://github.com/mcmtroffaes/sphinxcontrib-bibtex.git#egg=sphinxcontrib-bibtex
