--- a/doc/Makefile
+++ b/doc/Makefile
@@ -85,17 +85,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/MCMCsim.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Mamba.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/MCMCsim.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Mamba.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/MCMCsim"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/MCMCsim"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/Mamba"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Mamba"
 	@echo "# devhelp"
 
 epub:
