--- a/Project.toml
+++ b/Project.toml
@@ -24,16 +24,9 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-Cairo = "≥ 0.2.31"
-Calculus = "≥ 0.1.13"
-Compose = "≥ 0.3.18"
-Distributions = "≥ 0.17.0"
-Gadfly = "≥ 1.0.0"
-LightGraphs = "≥ 0.7.0"
-PDMats = "≥ 0.3.6"
-Showoff = "≥ 0.0.6"
-StatsBase = "≥ 0.7.4"
-julia = "≥ 1.0.0"
+Gadfly = "1"
+LightGraphs = "1"
+julia = "1"
 
 [extras]
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
