--- a/Project.toml
+++ b/Project.toml
@@ -24,8 +24,17 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+Cairo = "1"
+Calculus = "^0"
+Compose = "^0"
+Distributions = "0.23"
 Gadfly = "1"
 LightGraphs = "1"
+PDMats = "0.9"
+Reexport = "^0"
+Showoff = "^0"
+SpecialFunctions = "0.8, 0.9, 0.10"
+StatsBase = "0.32, 0.33"
 julia = "1"
 
 [extras]
