--- a/Project.toml
+++ b/Project.toml
@@ -27,13 +27,13 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Cairo = "1"
 Calculus = "^0"
 Compose = "^0"
-Distributions = "0.23"
+Distributions = "0.23 - 0.25"
 Gadfly = "1"
 LightGraphs = "1"
 PDMats = "0.9"
 Reexport = "^0"
 Showoff = "^0"
-SpecialFunctions = "0.8, 0.9, 0.10"
+SpecialFunctions = "0.8 - 2.1"
 StatsBase = "0.32, 0.33"
 julia = "1"
 
