Extend PDMats compat versions

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Compose = "^0"
 Distributions = "0.23 - 0.25"
 Gadfly = "1"
 LightGraphs = "1"
-PDMats = "0.9"
+PDMats = "0.9 - 0.11"
 Reexport = "^0"
 Showoff = "^0"
 SpecialFunctions = "0.8 - 2.1"
